--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@ padding-bottom: 44px;
   height: 40px;
 }
 
+.main-menu .main-menu_button_active {
+  border-left: 1px solid #838383;
+  border-right: 1px solid #838383;
+  background-color: #3d3d3d;
+}
+
 .main-menu li {
   float: left;
   margin-right: 50px;
@@ -140,6 +146,12 @@ padding-bottom: 44px;
   padding-left: 40px;
 }
 
+.page-menu .page-menu_botton_active a{
+  color: #2c2c2c;
+  padding-left: 40px;
+  background-color: #e2e2e2;
+}
+
 .page-menu li a:visited {
   color: #blue;
 }
@@ -186,9 +198,22 @@ p {
   width: 100px;
 }
 
-.nav li a:hover{
+.nav li a:hover {
   text-decoration: underline;
 }
+
+.nav li a:active {
+  text-decoration: underline;
+}
+
+.nav li a:visited {
+  text-color: gray;
+}
+
+.nav .nav_botton_active {
+  text-decoration: underline;
+}
+
 
 .author {
   padding-top: 12px;
